Test mecanismo de recuperacion de contraseña

--- a/paquescolar-web/src/main/webapp/activarPassword.xhtml
+++ b/paquescolar-web/src/main/webapp/activarPassword.xhtml
@@ -40,24 +40,28 @@
                                 <p:outputLabel value="Sistema de Paquetes Escolares" style="font-size: 30px; padding-top: 25px; font-family: 'Bembo Std' !important"/>
                             </div>
                             <p:outputPanel >
-                                <div class="ui-g-12">
-
+                                <div class="ui-g-12" style="display:#{(validarProveedorMB.tokenValido)?'block':'none'}">
                                     <div class="ui-g-12">
                                         <h:outputLabel for="pwd1" value="Clave de Acceso: *" />
-                                        <p:password id="pwd1" value="#{validarProveedorMB.pass1}" match="pwd2" label="Password 1" required="true" />
+                                        <p:password id="pwd1" value="#{validarProveedorMB.pass1}" match="pwd2" label="Password 1" required="true" disabled="#{!validarProveedorMB.tokenValido}" />
                                     </div>
                                     <div class="ui-g-12">
                                         <h:outputLabel for="pwd2" value="Confirmar clave: *" />
-                                        <p:password id="pwd2" value="#{validarProveedorMB.pass1}" label="Password 2" required="true" />
+                                        <p:password id="pwd2" value="#{validarProveedorMB.pass1}" label="Password 2" required="true" disabled="#{!validarProveedorMB.tokenValido}"/>
                                     </div>
                                     <div class="ui-g-12 button-container">
                                         <p:commandButton id="btnGuardar" value="Guardar" styleClass="blue-btn raised-btn" 
-                                                         action="#{validarProveedorMB.guardarPasswordProv()}" update="divPrincipal"/>
+                                                         action="#{validarProveedorMB.guardarPasswordProv()}" update="divPrincipal" disabled="#{!validarProveedorMB.tokenValido}"/>
                                         <p:blockUI block="btnGuardar" trigger="btnGuardar" />
                                         <h:outputText value="."/>
                                     </div>
                                 </div>
-
+                                <div class="ui-g-12" style="display:#{(!validarProveedorMB.tokenValido)?'block':'none'}">
+                                    <p:staticMessage severity="info" summary="INFO!" detail="Debe de solicitar nuevamente el cambio de contraseña" />
+                                </div>
+                                <div class="ui-g-12" style="display:#{(!validarProveedorMB.tokenValido)?'block':'none'}">
+                                    <p:commandButton id="btnHome" value="Inicio" action="index.mined" rendered="#{!validarProveedorMB.tokenValido}"/>
+                                </div>
                             </p:outputPanel>
 
                             <div class="ui-g-12">
