--- a/envio-web/src/main/webapp/mensaje.xhtml
+++ b/envio-web/src/main/webapp/mensaje.xhtml
@@ -90,13 +90,13 @@
                                             </p:outputPanel>
                                             <p:fileUpload id="updFile" listener="#{envioView.handleFileUpload}" auto="true" widgetVar="updFile" fileLimit="1" rendered="#{envioView.showUploadFile}"
                                                           label="Seleccionar" allowTypes="/(\.|\/)(xlsx)$/" invalidFileMessage="Unicamente archivos Excel (xlsx)" 
-                                                          mode="advanced" update="pngUpload btnEnviar" disabled="#{not envioView.correoValido}" 
+                                                          mode="advanced" update="pngUpload btnEnviar"
                                                           onstart="PF('dlgEspera').show();" oncomplete="PF('dlgEspera').hide();"/>
 
                                         </p:panelGrid>
                                         <br/>
                                         <p:panelGrid columns="3" columnClasses="ui-g-5, ui-g-2, ui-g-5" style="margin: 0 auto; text-align: center; width: 360px;"  styleClass="form-group ui-panelgrid-blank" layout="grid">
-                                            <p:commandButton id="btnEnviar" widgetVar="btnEnviar" value="Enviar" disabled="#{envioView.showUploadFile}"
+                                            <p:commandButton id="btnEnviar" value="Enviar" disabled="#{envioView.showUploadFile}"
                                                              action="#{envioView.validarFormulario()}" style="width: 200px;" />
                                             <p:spacer/>
                                             <p:commandButton id="btnCerrar" widgetVar="btnCerrar" value="Cerrar"
