--- a/paquescolar-web/src/main/webapp/app/reg02EstadisticaCenso.xhtml
+++ b/paquescolar-web/src/main/webapp/app/reg02EstadisticaCenso.xhtml
@@ -478,7 +478,7 @@
                                 </p:column>
                             </p:row>
                             <p:row style="background-color: #86b8f0;" rendered="#{estadisticasCensoController.mostrarModFlex}">
-                                <p:column>III Ciclo - Modalidad Flexible</p:column>
+                                <p:column>Modalidad Flexible (Todos los niveles Nocturna y 3er Ciclo Distancia)</p:column>
                                 <p:column><p:inputNumber id="txtCIIIMFFem" emptyValue="zero" onclick="this.setSelectionRange(0, this.value.length);" disabled="#{estadisticasCensoController.isProcesoAdq}" styleClass="numero" size="4" value="#{estadisticasCensoController.estaditicaCiclo3MF.femenimo}" onkeyup="calcularSubTotalMatricula('txtCIIIMFFem', 'txtCIIIMFMas', 'lblMatCIIIMF'); calcularMontoPorNivel('txtCIIIMFFem', 'txtCIIIMFMas', 'CIIIMF');" decimalPlaces="0" minValue="0" inputStyle="text-align: right;"/></p:column>
                                 <p:column><p:inputNumber id="txtCIIIMFMas" emptyValue="zero" onclick="this.setSelectionRange(0, this.value.length);" disabled="#{estadisticasCensoController.isProcesoAdq}" styleClass="numero" size="4" value="#{estadisticasCensoController.estaditicaCiclo3MF.masculino}" onkeyup="calcularSubTotalMatricula('txtCIIIMFFem', 'txtCIIIMFMas', 'lblMatCIIIMF'); calcularMontoPorNivel('txtCIIIMFFem', 'txtCIIIMFMas', 'CIIIMF');" decimalPlaces="0" minValue="0" inputStyle="text-align: right;"/></p:column>
                                 <p:column styleClass="numero"><p:outputLabel id="lblMatCIIIMF"><f:convertNumber pattern="#,#00"/></p:outputLabel></p:column>
@@ -556,7 +556,7 @@
                                 </p:column>
                             </p:row>
                             <p:row style="background-color: #86b8f0;" rendered="#{estadisticasCensoController.mostrarModFlex}">
-                                <p:column>Media - Modalidad Flexible</p:column>
+                                <p:column>Media - Modalidad Flexible (Distancia)</p:column>
                                 <p:column><p:inputNumber id="txtBacMFFem" emptyValue="zero" onclick="this.setSelectionRange(0, this.value.length);" disabled="#{estadisticasCensoController.isProcesoAdq}" styleClass="numero" size="4" value="#{estadisticasCensoController.estaditicaBacMF.femenimo}" onkeyup="calcularSubTotalMatricula('txtBacMFFem', 'txtBacMFMas', 'lblMatBacMF'); calcularMontoPorNivel('txtBacMFFem', 'txtBacMFMas', 'BacMF');" decimalPlaces="0" minValue="0" inputStyle="text-align: right;"/></p:column>
                                 <p:column><p:inputNumber id="txtBacMFMas" emptyValue="zero" onclick="this.setSelectionRange(0, this.value.length);" disabled="#{estadisticasCensoController.isProcesoAdq}" styleClass="numero" size="4" value="#{estadisticasCensoController.estaditicaBacMF.masculino}" onkeyup="calcularSubTotalMatricula('txtBacMFFem', 'txtBacMFMas', 'lblMatBacMF'); calcularMontoPorNivel('txtBacMFFem', 'txtBacMFMas', 'BacMF');" decimalPlaces="0" minValue="0" inputStyle="text-align: right;"/></p:column>
                                 <p:column styleClass="numero"><p:outputLabel id="lblMatBacMF"><f:convertNumber pattern="#,#00"/></p:outputLabel></p:column>
