--- a/paquescolar-web/src/main/webapp/app/rpt07ConstanciaRenta.xhtml
+++ b/paquescolar-web/src/main/webapp/app/rpt07ConstanciaRenta.xhtml
@@ -158,7 +158,7 @@
                                     </p:selectOneMenu>
                                     <h:outputText value="Número de Requerimiento"/>
                                     <h:panelGroup>
-                                        <p:inputMask value="#{pagoProveedoresController.numeroRequerimiento}" mask="P99-999999-99"/>
+                                        <p:inputText value="#{pagoProveedoresController.numeroRequerimiento}"/>
                                         <p:spacer width="10"/>
                                         <p:outputLabel value="(filtro opcional)"/>
                                     </h:panelGroup>
