--- a/cooperacion-web/src/main/webapp/app/listadoProyectos.xhtml
+++ b/cooperacion-web/src/main/webapp/app/listadoProyectos.xhtml
@@ -109,7 +109,7 @@
                                 </h:outputText>
                             </p:column>
                             <p:column headerText="Respuesta a enviar">
-                                <p:commandButton value="Enviada" />
+                                <p:commandButton value="Enviada" icon="pi pi-envelope" />
                             </p:column>
                         </p:dataTable>
                     </div>
@@ -236,12 +236,12 @@
                             </div>
                         </p:panel>
 
-                        <p:commandButton value="Guardar" update="pnlDatosCe pnlDatosProyecto" validateClient="true" action="#{registrarCooperacionView.guardar()}"/>
+                        <p:commandButton value="Guardar" update="pnlDatosProyecto" validateClient="true" action="#{registrarCooperacionView.guardar()}"/>
                     </div>
                 </p:outputPanel>
 
                 <f:facet name="footer">
-                    <p:commandButton value="Save" icon="pi pi-check" actionListener="#{registrarCooperacionView.guardar()}" update="pnlDatosCe pnlDatosProyecto" process="manage-product-content @this" />
+                    <p:commandButton value="Save" icon="pi pi-check" actionListener="#{registrarCooperacionView.guardar()}" update="pnlDatosProyecto" process="manage-product-content @this" />
                     <p:commandButton value="Cancel" icon="pi pi-times" onclick="PF('manageProductDialog').hide()" class="secondary-button" />
                 </f:facet>
             </p:dialog> 
